--- a/src/completer.css
+++ b/src/completer.css
@@ -1,31 +1,32 @@
 .completer-container {
-    background-color: #fff;
-    border: 1px solid #ccc;
-    border-bottom-color: #39f;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    font-family: inherit;
-    font-size: 14px;
-    line-height: normal;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    position: absolute;
+  position: absolute;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family: inherit;
+  font-size: 14px;
+  line-height: normal;
+  list-style: none;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-bottom-color: #39f;
 }
+
 .completer-container li {
-    background-color: #fff;
-    border-bottom: 1px solid #eee;
-    cursor: pointer;
-    margin: 0;
-    overflow: hidden;
-    padding: 0.5em 0.8em;
-    text-overflow: ellipsis;
-    white-space: nowrap;
+  padding: .5em .8em;
+  margin: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  cursor: pointer;
+  background-color: #fff;
+  border-bottom: 1px solid #eee;
 }
+
 .completer-container .completer-selected,
 .completer-container li:hover {
-    border-left: 1px solid #39f;
-    background-color: #eee;
-    margin-left: -1px;
+  margin-left: -1px;
+  background-color: #eee;
+  border-left: 1px solid #39f;
 }
